--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/openapi": "^1.4.14",
+    "@exalabs/ai-sdk": "^1.0.5",
+    "@openrouter/ai-sdk-provider": "^2.2.3",
+    "ai": "^6.0.79",
+    "elysia": "latest",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "bun-types": "latest"
