--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.35.0",
     "@elysiajs/openapi": "^1.4.14",
     "@exalabs/ai-sdk": "^1.0.5",
     "@openrouter/ai-sdk-provider": "^2.2.3",
